--- a/app/views/about/home.html.erb
+++ b/app/views/about/home.html.erb
@@ -9,10 +9,12 @@
     </div>
   </div>
   <div class="row centered">
-    <div class="col-lg-4 col-lg-offset-4 w">
+    <div class="col-lg-8 col-lg-offset-2 w">
       <div id="michigan" class="school"><img src="assets/Block_M__Maize.png"></div>
       <div id="purdue" class="school"><img src="assets/purdue.png"></div>
-      <div id="caltech"></div>
+      <div id="pennState" class="school"><img src="assets/pennstate.png"></div>
+      <div id="ucla" class="school"><img src="assets/ucla.png"></div>
+      <p>&lt;Links coming soon&gt;</p>
       <!-- <a data-toggle="tooltip" title="Dribbble" href="http://dribbble.com/CarlosAlvarez"><i class="fa fa-dribbble"></i></a>
       <a data-toggle="tooltip" title="Twitter" href="http://twitter.com/BlackTie_co"><i class="fa fa-twitter"></i></a>
       <a data-toggle="tooltip" title="Premium Themes" href="https://wrapbootstrap.com/user/Basicoh"><i class="fa fa-briefcase"></i></a>
@@ -28,7 +30,7 @@
   <div class="row w centered">
     <br>    
     <div class="col-lg-6 col-lg-offset-3">
-      <!-- <p>&lt;Associated schools and companies coming soon&gt;</p> -->
+      
     </div>
   </div>
 </div>
