--- a/app/views/about/home.html.erb
+++ b/app/views/about/home.html.erb
@@ -9,12 +9,11 @@
     </div>
   </div>
   <div class="row centered">
-    <div class="col-lg-8 col-lg-offset-2 w">
+    <div id="schools" class="col-lg-8 col-lg-offset-2 w">
       <div id="michigan" class="school"><img src="assets/Block_M__Maize.png"></div>
       <div id="purdue" class="school"><img src="assets/purdue.png"></div>
       <div id="pennState" class="school"><img src="assets/pennstate.png"></div>
       <div id="ucla" class="school"><img src="assets/ucla.png"></div>
-      <p>&lt;Links coming soon&gt;</p>
       <!-- <a data-toggle="tooltip" title="Dribbble" href="http://dribbble.com/CarlosAlvarez"><i class="fa fa-dribbble"></i></a>
       <a data-toggle="tooltip" title="Twitter" href="http://twitter.com/BlackTie_co"><i class="fa fa-twitter"></i></a>
       <a data-toggle="tooltip" title="Premium Themes" href="https://wrapbootstrap.com/user/Basicoh"><i class="fa fa-briefcase"></i></a>
@@ -24,6 +23,7 @@
       <a data-toggle="tooltip" title="Newsletter" href="http://eepurl.com/Eck_T"><i class="fa fa-coffee"></i></a> -->
     </div>
   </div>
+  <div id="progress"><p>&lt;Links coming soon&gt;</p></div>
 </div><!-- /.container -->
   
 <div class="container">
