--- a/app/views/about/home.html.erb
+++ b/app/views/about/home.html.erb
@@ -4,8 +4,7 @@
   </div>
   <div class="row centered">
     <div class="col-lg-8 col-lg-offset-2 w">
-      <h1>Fuck it, Ship it</h1><br/>
-      <h2>Around the nation</h2>
+      <h1>Fuck it, Ship it</h1>
     </div>
   </div>
   <div class="row centered">
@@ -14,6 +13,7 @@
       <div id="purdue" class="school"><img src="assets/purdue.png"></div>
       <div id="pennState" class="school"><img src="assets/pennstate.png"></div>
       <div id="ucla" class="school"><img src="assets/ucla.png"></div>
+      <div id="georgia" class="school"><img src="assets/georgia.png"></div>
       <!-- <a data-toggle="tooltip" title="Dribbble" href="http://dribbble.com/CarlosAlvarez"><i class="fa fa-dribbble"></i></a>
       <a data-toggle="tooltip" title="Twitter" href="http://twitter.com/BlackTie_co"><i class="fa fa-twitter"></i></a>
       <a data-toggle="tooltip" title="Premium Themes" href="https://wrapbootstrap.com/user/Basicoh"><i class="fa fa-briefcase"></i></a>
@@ -23,14 +23,18 @@
       <a data-toggle="tooltip" title="Newsletter" href="http://eepurl.com/Eck_T"><i class="fa fa-coffee"></i></a> -->
     </div>
   </div>
-  <div id="progress"><p>&lt;Links coming soon&gt;</p></div>
 </div><!-- /.container -->
   
 <div class="container">
   <div class="row w centered">
     <br>    
-    <div class="col-lg-6 col-lg-offset-3">
-      
+    <div class="col-lg-6 col-lg-offset-3" id="contact">
+      <p>Come ship with us!<br><br>
+      <p>Want to know what we're about?
+      <p>Feel free to message either 
+        <a href="https://www.facebook.com/afeight">Austin Feight</a>
+        <a href="https://www.facebook.com/cole.kushner">Cole Kushner</a>
+      </p>
     </div>
   </div>
 </div>
