--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,18 +17,29 @@ body, .container {
 }
 
 #schools {
-  width: 800px;
+  width: 960px;
+  margin-left: auto;
+  margin-right: auto;
   /*float: none !important;*/
 }
 
 .school {
   float: left;
-  margin-left: 20px;
+  margin: 10px 0px 0px 20px;
 }
 
 #progress {
   width: 170px;
   margin: 0 auto;
+}
+
+#contact a {
+  text-decoration: underline;
+  color: #555;
+}
+
+#contact p {
+  margin-bottom: 0px;
 }
 
 @media (max-width: 1199px) {
