--- a/app/views/about/home.html.erb
+++ b/app/views/about/home.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="row centered">
-    <div id="schools" class="col-lg-8 col-lg-offset-2 w">
+    <div id="schools" class="w">
       <div id="michigan" class="school"><img src="assets/Block_M__Maize.png"></div>
       <div id="purdue" class="school"><img src="assets/purdue.png"></div>
       <div id="pennState" class="school"><img src="assets/pennstate.png"></div>
