get on my pretty level

--- a/app/views/hacks/showcase.html.erb
+++ b/app/views/hacks/showcase.html.erb
@@ -1,2 +1,126 @@
-<h1>Hacks#showcase</h1>
-<p>Find me in app/views/hacks/showcase.html.erb</p>
+<div id="hacksTitle">
+  <h1>Check out these awesome hacks from the University of Michigan!</h1>
+</div>
+
+
+<div class="hack row">
+  <div class="col-lg-8">
+    <div class="info">
+      <div class="text">
+        <p>What: Girlfriend app</p>
+        <p>Who: Austin Feight</p>
+        <p>Date: Today</p>
+      </div>
+      <div class="hackatar"><img src="https://2.gravatar.com/avatar/d0a72064abc0165a01c661adca3f7331?d=https%3A%2F%2Fidenticons.github.com%2F0e2f90de7c57a4d1faf7a14530b1c4eb.png&r=x&s=440"></div>
+    </div>
+    
+    <div class="hackContent">
+      <p>Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. </p>
+    </div>
+  </div>
+  <div class="col-lg-3 col-lg-offset-1">
+    <img class="hackImg" src="https://github.com/feighter09/lookingDown-iOS/blob/demo/Screenshots/Screenshot_Open_Small.png?raw=true">
+  </div>
+</div>
+
+<div class="hack row">
+  <div class="col-lg-8">
+    <div class="info">
+      <div class="text">
+        <p>What: Girlfriend app</p>
+        <p>Who: Austin Feight</p>
+        <p>Date: Today</p>
+      </div>
+      <div class="hackatar"><img src="https://2.gravatar.com/avatar/d0a72064abc0165a01c661adca3f7331?d=https%3A%2F%2Fidenticons.github.com%2F0e2f90de7c57a4d1faf7a14530b1c4eb.png&r=x&s=440"></div>
+    </div>
+    
+    <div class="hackContent">
+      <p>Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. </p>
+    </div>
+  </div>
+  <div class="col-lg-3 col-lg-offset-1">
+    <img class="hackImg" src="https://github.com/feighter09/lookingDown-iOS/blob/demo/Screenshots/Screenshot_Open_Small.png?raw=true">
+  </div>
+</div>
+
+
+<div class="hack row">
+  <div class="col-lg-8">
+    <div class="info">
+      <div class="text">
+        <p>What: Girlfriend app</p>
+        <p>Who: Austin Feight</p>
+        <p>Date: Today</p>
+      </div>
+      <div class="hackatar"><img src="https://2.gravatar.com/avatar/d0a72064abc0165a01c661adca3f7331?d=https%3A%2F%2Fidenticons.github.com%2F0e2f90de7c57a4d1faf7a14530b1c4eb.png&r=x&s=440"></div>
+    </div>
+    
+    <div class="hackContent">
+      <p>Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. </p>
+    </div>
+  </div>
+  <div class="col-lg-3 col-lg-offset-1">
+    <img class="hackImg" src="https://github.com/feighter09/lookingDown-iOS/blob/demo/Screenshots/Screenshot_Open_Small.png?raw=true">
+  </div>
+</div>
+
+<div class="hack row">
+  <div class="col-lg-8">
+    <div class="info">
+      <div class="text">
+        <p>What: Girlfriend app</p>
+        <p>Who: Austin Feight</p>
+        <p>Date: Today</p>
+      </div>
+      <div class="hackatar"><img src="https://2.gravatar.com/avatar/d0a72064abc0165a01c661adca3f7331?d=https%3A%2F%2Fidenticons.github.com%2F0e2f90de7c57a4d1faf7a14530b1c4eb.png&r=x&s=440"></div>
+    </div>
+    
+    <div class="hackContent">
+      <p>Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. </p>
+    </div>
+  </div>
+  <div class="col-lg-3 col-lg-offset-1">
+    <img class="hackImg" src="https://github.com/feighter09/lookingDown-iOS/blob/demo/Screenshots/Screenshot_Open_Small.png?raw=true">
+  </div>
+</div>
+
+
+<div class="hack row">
+  <div class="col-lg-8">
+    <div class="info">
+      <div class="text">
+        <p>What: Girlfriend app</p>
+        <p>Who: Austin Feight</p>
+        <p>Date: Today</p>
+      </div>
+      <div class="hackatar"><img src="https://2.gravatar.com/avatar/d0a72064abc0165a01c661adca3f7331?d=https%3A%2F%2Fidenticons.github.com%2F0e2f90de7c57a4d1faf7a14530b1c4eb.png&r=x&s=440"></div>
+    </div>
+    
+    <div class="hackContent">
+      <p>Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. </p>
+    </div>
+  </div>
+  <div class="col-lg-3 col-lg-offset-1">
+    <img class="hackImg" src="https://github.com/feighter09/lookingDown-iOS/blob/demo/Screenshots/Screenshot_Open_Small.png?raw=true">
+  </div>
+</div>
+
+<div class="hack row">
+  <div class="col-lg-8">
+    <div class="info">
+      <div class="text">
+        <p>What: Girlfriend app</p>
+        <p>Who: Austin Feight</p>
+        <p>Date: Today</p>
+      </div>
+      <div class="hackatar"><img src="https://2.gravatar.com/avatar/d0a72064abc0165a01c661adca3f7331?d=https%3A%2F%2Fidenticons.github.com%2F0e2f90de7c57a4d1faf7a14530b1c4eb.png&r=x&s=440"></div>
+    </div>
+    
+    <div class="hackContent">
+      <p>Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. Here's a whole bunch of text about my shit. </p>
+    </div>
+  </div>
+  <div class="col-lg-3 col-lg-offset-1">
+    <img class="hackImg" src="https://github.com/feighter09/lookingDown-iOS/blob/demo/Screenshots/Screenshot_Open_Small.png?raw=true">
+  </div>
+</div>
