--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,14 @@ body, .container {
   min-width: 420px !important;
 }
 
+footer {
+  margin-bottom: 30px;
+}
+
+#homeTitle h1 {
+  font-size: 100px !important;
+}
+
 #schools {
   width: 900px;
   margin-left: auto;
@@ -40,6 +48,55 @@ body, .container {
 
 #contact p {
   margin-bottom: 0px;
+}
+
+#hacksTitle h1 {
+  text-align: center;
+  padding-bottom: 80px;
+}
+
+.info {
+  width: 100%;
+  height: 100px;
+}
+
+.text {
+  width: 80%;
+  float: left;
+}
+
+.hackatar {
+  width: 20%;
+  height: 100%;
+  float: left;
+}
+
+.hackatar img {
+  max-height: 90px;
+  border-radius: 50%;
+}
+
+.hack {
+  padding: 20px;
+  width: 100%;
+}
+
+.hack:nth-child(odd) {
+  background: rgba(100, 100, 100, 0.3);
+  color: white !important;
+}
+
+.hack:nth-child(even) {
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.hack p {
+  margin-bottom: 0px;
+}
+
+.hackImg {
+  max-height: 300px;
+  float: right;
 }
 
 @media (max-width: 1199px) {
