grammar is cool

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
           <p>Come ship with us!</p><br><br>
           <p>Want to know what we're about?</p>
           <p>Feel free to message either
-            <a href="https://www.facebook.com/afeight">Austin Feight</a>
+            <a href="https://www.facebook.com/afeight">Austin Feight</a> or 
             <a href="https://www.facebook.com/cole.kushner">Cole Kushner</a>
           </p>
         </div>
